# caw

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  qml.cmake  readme.md  res.qrc  resources.cmake
.github/workflows/: android.yml  linux.yml  macos.yml  windows.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kraxarn/caw/: CawActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
cmake/: icons.cmake
include/caw/: appstate.h  guistate.h  logcategory.h  renderdriver.h  settings.h  ui.h
include/caw/gui/: apptheme.h  menubar.h  tracker.h  windowsettings.h
include/caw/renderer/: clayrenderersdl3.h
include/caw/res/: fonts.h  icons.h
include/shiny/: element.h
include/shiny/internal/: color.h
nkui/: CMakeLists.txt  readme.md
nkui/include/caw/: appstate.h  guistate.h  logcategory.h  ui.h  uiconfig.h
nkui/include/caw/gui/: apptheme.h  menubar.h  tracker.h
nkui/include/caw/renderer/: allocator.h  nk_sdl.h
nkui/src/: CMakeLists.txt  main.c  ui.c
nkui/src/gui/: CMakeLists.txt  apptheme.c  menubar.c  tracker.c
nkui/src/renderer/: CMakeLists.txt  allocator.c  nk_sdl.c
presets/: base_string.json  bass_drum_1.json  bass_drum_2.json  bass_drum_3.json  bell.json  classic_8bit.json  default.json  hi_hat_1.json  hi_hat_2.json  hihat_1.json  hihat_2.json  pipe_hit.json  readme.md  smash.json  snare_1.json  snare_2.json  softy.json  square.json  wind.json
qml/: AppMenuBar.qml  Main.qml
res/: caw.icns  convicon.sh  qtquickcontrols2.conf
res/icons/: checkbox-blank-outline.qoi  checkbox-marked.qoi  readme.md
src/: CMakeLists.txt  apptheme.cpp  apptheme.hpp  audiodriver.c  font.cpp  font.hpp  format.hpp  icon.cpp  icon.hpp  iconengine.cpp  iconengine.hpp  iconname.hpp  iconsizes.cpp  iconsizes.hpp  main.c  main.cpp  mainmenubar.cpp  mainmenubar.hpp  maintoolbar.cpp  maintoolbar.hpp  mainwindow.cpp  mainwindow.hpp  note.hpp  pianokey.cpp  pianokey.hpp  renderdriver.c  settings.c  ui.c  videodriver.c
src/enums/: envelope.hpp
src/gui/: .gitignore  CMakeLists.txt  apptheme.c  icons.c  menubar.c  tracker.c  windowsettings.c
src/list/: orderlist.cpp  orderlist.hpp
src/lists/: CMakeLists.txt  instrumentlist.cpp  instrumentlist.hpp  orderlist.cpp  orderlist.hpp  patternlist.cpp  patternlist.hpp
src/menus/: CMakeLists.txt  loadpresetmenu.cpp  loadpresetmenu.hpp
src/model/: ordermodel.cpp  ordermodel.hpp
src/models/: CMakeLists.txt  instrumentmodel.cpp  instrumentmodel.hpp  ordermodel.cpp  patternmodel.cpp  patternmodel.hpp
src/pl/: pl_synth.h
src/renderer/: CMakeLists.txt
src/res/: CMakeLists.txt  icons.c
src/synth/: CMakeLists.txt  instrument.cpp  instrument.hpp  note.hpp  player.cpp  player.hpp
src/widgets/: CMakeLists.txt  color.c  editorpanel.cpp  editorpanel.hpp  element.c  envelopeeditor.cpp  envelopeeditor.hpp  fxeditor.cpp  fxeditor.hpp  instrumentpresets.cpp  instrumentpresets.hpp  lfoeditor.cpp  lfoeditor.hpp  oscillatoreditor.cpp  oscillatoreditor.hpp  oscilloscope.cpp  oscilloscope.hpp  playcontrols.cpp  propertyslider.cpp  propertyslider.hpp  readme.md  theme.c  valueslider.cpp  valueslider.hpp
src/window/: CMakeLists.txt  debug.cpp  debug.hpp  order.cpp  order.hpp  oscilloscope.cpp  pattern.cpp  playcontrols.cpp  playcontrols.hpp
src/windows/: CMakeLists.txt  debug.cpp  instrument.cpp  instrument.hpp  instrumenteditor.cpp  instrumenteditor.hpp  instruments.cpp  instruments.hpp  instrumentview.cpp  instrumentview.hpp  order.cpp  order.hpp  oscilloscope.cpp  oscilloscopechannel.cpp  oscilloscopechannel.hpp  pattern.cpp  pattern.hpp  piano.cpp  piano.hpp  playback.cpp  playback.hpp  playcontrols.cpp  songinfo.cpp  songinfo.hpp
